# qml-parser

./: Cargo.toml  README.md
bevy_qml/: Cargo.toml
bevy_qml/examples/: basic.rs  simple.rs  ui.qml  ui.rs
bevy_qml/res/: basic.qml
bevy_qml/src/: lib.rs  main.rs  ui.rs
qml-parser/: Cargo.toml  README.md
qml-parser/src/: lib.rs  qml.pest  tests.rs
res/: basic.qml
src/: lib.rs  main.rs  qml.pest  tests.rs
