[package]
name = "bevy_qml"
version = "0.1.0"
authors = ["Tomasz Sterna <tomek@sterna.link>"]
edition = "2018"

[dependencies]
bevy_ecs = { version = "0.4", default-features = false }
bevy_reflect = { version = "0.4", default-features = false, features = [
    "bevy_app",
    "bevy_ecs"
] }
qml-parser = { version = "0.1", path = "../qml-parser" }

[dev-dependencies]
bevy = "0.4"
